--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 
 <body>
   <script src="dist/bundle.js"></script>
-<!--<div>
-  <canvas id="tetrisCanvas" width="200" height="400" style="background-color:#147479"></canvas>
-  <div id="score"></div>
-</div>-->
+</div>
 </body>
 </html>
